make version two plus n

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Archimood</title>
+        <title>Archimood | Belsőépítészet, Interior design</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
@@ -47,7 +47,7 @@
 
         <!-- ========== Navigation ========== -->
 
-        <nav class="navbar navbar-default navbar-fixed-top navbar-trans navbar-trans-dark trans-helper navbar-fw" role="navigation">
+        <nav class="navbar navbar-default navbar-fixed-top mega navbar-trans navbar-fw" role="navigation">
           <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -331,9 +331,8 @@
                         <h5>Projektmenedzsment</h5>
                         <p>Aktív részvétel az elkészült tervek megvalósításának folyamatában. Művezetés, kapcsolattartás, ellenőrzés és tanácsadás.</p>
                     </div>
-                    <div>
-                        <p></p>
-                        <a href="oldalak/tervezes_folyamata.html" class="linea-arrows-slim-right href-arrow text-center"></a>
+                    <div class="text-center">
+                        <a href="oldalak/tervezes_folyamata.html" class="btn-ghost">TERVEZÉS MENETE</a>
                     </div>
 
                 </div><!-- / .row -->
@@ -351,7 +350,7 @@
 
                         <!-- Image -->
                         <div class="t-image">
-                            <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+                            <img src="assets/images/profilkep.png" alt="Team Member" class="img-responsive">
                         </div>
 
                         <!-- Info -->
@@ -367,15 +366,15 @@
                     </div><!-- / .t-item -->
                 </div><!-- / .col-md-4 -->
 
-                <div class="col-lg-4 freelancer-about-content">
-                    <h2 class="t1-heading">Rólam</h2>
-                    <p>Pogátsa József vagyok. Belsőépítész. Sokan azt gondolják, hogy „csak” lakásokat rendezek be, gyakran kevernek össze a lakberendezőkkel. A tudásom és a tapasztalatom ennél azonban jóval szélesebb körű.
-
+                <div class="col-lg-4">
+                    <h4>Rólam</h4>
+                    <p>
                         Belsőépítészként én nem csak a helyiségek adottságait használom, de alakítom azokat. Ha szükséges falakat mozgatok, tereket helyezek át, funkciókat cserélek fel, majd ezeket megtöltöm tartalommal, színekkel, anyagokkal, dekorációval, fénnyel, minden olyan elemmel, amitől egy ház otthonná válik. Persze nem csak otthonokat teremtek, ugyanezt teszem egy étterem, kávézó, múzeum, üzlet vagy szálloda esetében is, a különbség a megrendelői igény, funkció, célcsoport, lépték, és természetesen a felhasznált anyagok között van.
 
-                        A munkám szerteágazó ismeretet követel, szükséges a naprakész építészeti alapismeret, bútor tervezéshez némi faipari ismeret, naprakész rálátás a hazai is nemzetközi design trendekre, termékekre. Azt is tudnom kell, hogy ezeket a termékeket, honnan és mennyiért lehet beszerezni, a szaniterektől a lámpákon, tapétákon át a kanapékig. Tudnom kell alkalmazni a szakági tervezők (gépész, statikus, elektromos tervező, grafikus, web szerkesztő, stb.) tudását, hisz adott esetben nekem kell összefognom az ő munkájukat is, hasonlóan az építészhez.
+                        A munkám szerteágazó ismeretet követel, szükséges a naprakész építészeti alapismeret, bútor tervezéshez némi faipari ismeret, naprakész rálátás a hazai is nemzetközi design trendekre, termékekre. Tudnom kell alkalmazni a szakági tervezők (gépész, statikus, elektromos tervező, grafikus, web szerkesztő, stb.) tudását, hisz adott esetben nekem kell összefognom az ő munkájukat is, hasonlóan az építészhez.
 
-                        És mi tesz különlegessé? A biztos stílusérzékem, a legkülönbözőbb stílusirányokban való jártasságom, csipetnyi pszichológiai és remek kommunikációs készségem, valamint, hogy minden munkáim során az ügyfél az első. A végeredményt mindig együtt alakítjuk. Az ügyfeleim, ti tesztek engem különlegessé, miattatok vagyok képes folyamatosan megújulni.
+                        És mi tesz különlegessé? A szakmai tudásom, biztos stílusérzékem, remek kommunikációs készségem, valamint, hogy minden munkáim során az ügyfél az első. A végeredményt mindig együtt alakítjuk.
+
                     </p>
                 </div>
 
@@ -390,20 +389,73 @@
                     <ul>
                         <!-- Email -->
                         <li>
-                            <span class="linea-basic-paperplane adr-icon"></span>
-                            <div class="adr-group">
-                                <span class="adr-heading">E-mail cím</span>
-                                <span class="adr-info">pogatsajozsef@gmail.com</span>
-                            </div>
+                            <a href="mailto:pogatsajozsef@gmail.com">
+                                <span class="adr-icon">
+                                    <svg width="50px" height="50px" viewBox="0 0 150 150" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+                                            <path d="M27.9995348,35 C23.5815137,35 20,38.5797863 20,43.0000511 L20,106.999949 C20,111.418255 23.5818,115 27.9995348,115 L122.000465,115 C126.418486,115 130,111.421053 130,107.003003 L130,77.7167969 M130,54.824707 L130,42.9914236 C130,38.5778822 126.4182,35 122.000465,35 L27.9995348,35 M42.3012695,61.8647461 L77.3095703,82.9389648 L129.507324,55.1352539" id="message" stroke="#111111" stroke-width="4"></path>
+                                        </g>
+                                    </svg>
+                                </span>
+                                <div class="adr-group">
+                                    <span class="adr-heading">E-mail cím</span>
+                                    <span class="adr-info">pogatsajozsef@gmail.com</span>
+                                </div>
+                            </a>
                         </li>
 
                         <!-- Phone -->
                         <li>
-                            <span class="linea-basic-smartphone adr-icon"></span>
-                            <div class="adr-group">
-                                <span class="adr-heading">Telefonszám</span>
-                                <span class="adr-info">+36 70 338 79 66</span>
-                            </div>
+                            <a href="tel:+36703387966">
+                                <span class="adr-icon">
+                                    <svg width="50px" height="50px" viewBox="0 0 150 150" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                            <rect id="Rectangle" stroke="#000000" stroke-width="4" x="48" y="27" width="54" height="97" rx="5"></rect>
+                                            <path d="M48.5,106.5 L101.5,106.5" id="Line" stroke="#000000" stroke-width="4" stroke-linecap="square"></path>
+                                            <path d="M48.5,36.5 L101.5,36.5" id="Line-Copy" stroke="#000000" stroke-width="4" stroke-linecap="square"></path>
+                                            <rect id="Rectangle-2" fill="#000000" x="67" y="114" width="17" height="5" rx="2.5"></rect>
+                                        </g>
+                                    </svg>
+                                </span>
+                                <div class="adr-group">
+                                    <span class="adr-heading">Telefonszám</span>
+                                    <span class="adr-info">+36 70 338 79 66</span>
+                                </div>
+                            </a>
+                        </li>
+
+                        <!-- Phone -->
+                        <li>
+                            <a href="https://www.facebook.com/archimooddesign">
+                                <span class="adr-icon">
+                                    <svg width="50px" height="50px" viewBox="0 0 150 150" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+                                            <path d="M55.9794458,124.622941 L31.9793085,124.534643 C28.6657158,124.5218 25.9879583,121.656151 26.0000407,118.133892 L26.3005899,31.3558433 C26.311162,27.8335838 29.007043,24.9872 32.322146,25.0000433 L118.992077,25.319519 C122.30718,25.3307568 124.983427,28.1964055 124.972855,31.7202703 L124.672306,118.496714 C124.660224,122.020578 121.964343,124.865357 118.65075,124.854119 L77.9814595,124.703211 M100.744663,55.1714973 C100.744663,55.1714973 78.115876,43.0410541 78.0494229,63.5934541 C77.9829698,84.1458541 77.8500636,124.541065 77.8500636,124.541065 M100.663107,79.2670271 L61.9979812,79.1257514" id="Facebook" stroke="#111111" stroke-width="4"></path>
+                                        </g>
+                                    </svg>
+                                </span>
+                                <div class="adr-group">
+                                    <span class="adr-heading">Facebook</span>
+                                    <span class="adr-info">archimooddesign</span>
+                                </div>
+                            </a>
+                        </li>
+
+                        <!-- Phone -->
+                        <li>
+                            <a href="https://www.instagram.com/archimooddesign">
+                                <span class="adr-icon">
+                                    <svg width="50px" height="50px" viewBox="0 0 150 150" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+                                            <path d="M26.1225891,78.470459 L26.0000057,32.1444673 C25.9954655,28.8240366 28.6832891,26.1286459 32.0037198,26.1241057 L118.854019,26.0000057 C122.175963,25.9954655 124.871354,28.6832891 124.875894,32.0052332 L124.999994,118.855533 C125.004535,122.175963 122.315198,124.871354 118.994767,124.877408 L32.1444673,124.999994 C28.8240366,125.004534 26.1271325,122.316711 26.1225923,118.99628 L26.1225891,95.2929688 M98.3733322,67.0240864 C104.691651,79.3081697 99.8380056,94.4403587 87.5537469,100.758588 C75.2710203,107.076817 60.1370832,102.224772 53.818764,89.9406888 C47.501977,77.6566055 52.3540906,62.5228845 64.6383493,56.2046556 C76.9226081,49.8864266 92.0550131,54.7415351 98.3733322,67.0240864 L98.3733322,67.0240864 M114.26506,49.3886844 C114.26506,51.0640051 112.893779,52.4337349 111.218458,52.4337349 L101.805638,52.4337349 C100.130317,52.4337349 98.7590361,51.0640051 98.7590361,49.3886844 L98.7590361,39.9743126 C98.7590361,38.2989919 100.130317,36.9277108 101.805638,36.9277108 L111.218458,36.9277108 C112.893779,36.9277108 114.26506,38.2989919 114.26506,39.9743126 L114.26506,49.3886844 M26.2052002,78.4819277 L51.0481928,78.4819277 L26.2052002,78.4819277 Z M124.924316,78.4819277 L101.144578,78.4819277 L123.807229,78.4819277 M83.9583333,92.094716 C76.2325736,96.1273125 66.7157704,93.03036 62.743015,85.1910624 C60.7566372,81.2721423 60.5253959,76.8985167 61.7577257,73" id="Instagram" stroke="#111111" stroke-width="4"></path>
+                                        </g>
+                                    </svg>
+                                </span>
+                                <div class="adr-group">
+                                    <span class="adr-heading">Instagram</span>
+                                    <span class="adr-info">archimooddesign</span>
+                                </div>
+                            </a>
                         </li>
                     </ul>
                 </address>
@@ -414,11 +466,11 @@
                         <div class="row">
 
                             <div class="col-sm-6">
-                                <small>&copy; 2018 Archimood. Made by <a class="no-style-link" href="http://z-poc.hu" target="_blank">Z-Poc</a></small>
+                                <small>&copy; 2018 Archimood. Készítette: <a class="no-style-link" href="http://z-poc.hu" target="_blank">Z-Poc</a></small>
                             </div>
 
                             <div class="col-sm-6">
-                                <small><a href="#page-top" class="pull-right to-the-top">To The Top<i class="fa fa-angle-up"></i></a></small>
+                                <small><a href="#page-top" class="pull-right to-the-top">Oldal tetejére<i class="fa fa-angle-up"></i></a></small>
                             </div>
 
                         </div><!-- / .row -->
@@ -455,6 +507,5 @@
 
         <!-- Definity JS -->
         <script src="assets/js/main.js"></script>
-        <script src="assets/contact-form/ajax-cf-1.js"></script>
     </body>
 </html>
