--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             <!-- Scroller -->
             <a href="#portfolio" class="scroller">
-                <span class="scroller-text">scroll down</span>
+                <span class="scroller-text">Gördíts lefelé a tartalomhoz!</span>
                 <span class="linea-basic-magic-mouse"></span>
             </a>
 
@@ -358,8 +358,24 @@
                             <h4 class="t-name">Pogátsa József</h4>
                             <span class="t-role">Belsőépítész</span>
                             <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="https://www.instagram.com/pogatsajozsef/"><i class="fa fa-instagram"></i></a></li>
+                                <li>
+                                    <a href="https://www.facebook.com/archimooddesign">
+                                        <svg width="30px" height="30px" viewBox="0 0 150 150" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+                                                <path d="M55.9794458,124.622941 L31.9793085,124.534643 C28.6657158,124.5218 25.9879583,121.656151 26.0000407,118.133892 L26.3005899,31.3558433 C26.311162,27.8335838 29.007043,24.9872 32.322146,25.0000433 L118.992077,25.319519 C122.30718,25.3307568 124.983427,28.1964055 124.972855,31.7202703 L124.672306,118.496714 C124.660224,122.020578 121.964343,124.865357 118.65075,124.854119 L77.9814595,124.703211 M100.744663,55.1714973 C100.744663,55.1714973 78.115876,43.0410541 78.0494229,63.5934541 C77.9829698,84.1458541 77.8500636,124.541065 77.8500636,124.541065 M100.663107,79.2670271 L61.9979812,79.1257514" id="Facebook" stroke="#111111" stroke-width="4"></path>
+                                            </g>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/archimooddesign/">
+                                        <svg width="30px" height="30px" viewBox="0 0 150 150" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+                                                <path d="M26.1225891,78.470459 L26.0000057,32.1444673 C25.9954655,28.8240366 28.6832891,26.1286459 32.0037198,26.1241057 L118.854019,26.0000057 C122.175963,25.9954655 124.871354,28.6832891 124.875894,32.0052332 L124.999994,118.855533 C125.004535,122.175963 122.315198,124.871354 118.994767,124.877408 L32.1444673,124.999994 C28.8240366,125.004534 26.1271325,122.316711 26.1225923,118.99628 L26.1225891,95.2929688 M98.3733322,67.0240864 C104.691651,79.3081697 99.8380056,94.4403587 87.5537469,100.758588 C75.2710203,107.076817 60.1370832,102.224772 53.818764,89.9406888 C47.501977,77.6566055 52.3540906,62.5228845 64.6383493,56.2046556 C76.9226081,49.8864266 92.0550131,54.7415351 98.3733322,67.0240864 L98.3733322,67.0240864 M114.26506,49.3886844 C114.26506,51.0640051 112.893779,52.4337349 111.218458,52.4337349 L101.805638,52.4337349 C100.130317,52.4337349 98.7590361,51.0640051 98.7590361,49.3886844 L98.7590361,39.9743126 C98.7590361,38.2989919 100.130317,36.9277108 101.805638,36.9277108 L111.218458,36.9277108 C112.893779,36.9277108 114.26506,38.2989919 114.26506,39.9743126 L114.26506,49.3886844 M26.2052002,78.4819277 L51.0481928,78.4819277 L26.2052002,78.4819277 Z M124.924316,78.4819277 L101.144578,78.4819277 L123.807229,78.4819277 M83.9583333,92.094716 C76.2325736,96.1273125 66.7157704,93.03036 62.743015,85.1910624 C60.7566372,81.2721423 60.5253959,76.8985167 61.7577257,73" id="Instagram" stroke="#111111" stroke-width="4"></path>
+                                            </g>
+                                        </svg>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
 
