Fix latvanyterv cathegory

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item lakas egyeb">
+                    <div class="col-md-4 portfolio-item lakas latvany egyeb">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/03/03.jpg" alt="Project Example">
                             <div class="p-hover">
@@ -274,7 +274,7 @@
                     </div><!-- / .portfolio-item -->
 
                     <!-- Item -->
-                    <div class="col-md-4 portfolio-item csaladihaz latvanytervezes">
+                    <div class="col-md-4 portfolio-item csaladihaz latvany">
                         <div class="p-wrapper hover-default">
                             <img src="assets/images/portfolio/09/09.png" alt="Project Example">
                             <div class="p-hover">
