Fixing references padding

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </ul>
             </div>
             <div class="row">
-                <div id="pfolio">
+                <div id="pfolio" class="mb-15">
 
                     <!-- Item -->
                     <div class="col-md-4 portfolio-item csaladihaz latvany">
