Fix translation, and selection color.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <!-- Filters -->
             <div class="row">
                 <ul id="pfolio-filters" class="portfolio-filters">
-                    <li class="active"><a href="#" data-filter="*">All</a></li>
+                    <li class="active"><a href="#" data-filter="*">Mind</a></li>
                     <li><a href="#" data-filter=".hotel">Hotel</a></li>
                     <li><a href="#" data-filter=".szalon">Szalon</a></li>
                     <li><a href="#" data-filter=".lakas">Lakás</a></li>
@@ -291,7 +291,7 @@
 
                 <header class="sec-heading">
                     <h2>Szolgáltatásaink</h2>
-                    <span class="subheading">Ha építkezés, felújítás, átalakítás, ingatlan/helyiség bérbeadás, eladás vagy vétel előtt állsz, mindenképpen keress meg! Rengeteg pénzt és bosszúságot kereshetek vagy spórolhatok meg neked! </span>
+                    <span class="subheading">Ha építkezés, felújítás, átalakítás, ingatlan/helyiség bérbeadás, eladás vagy vétel előtt állsz, mindenképpen keress meg! Rengeteg pénzt és bosszúságot spórolhatok meg neked! </span>
                 </header>
 
                 <div class="row">
